--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
             <ul class="navbar-nav align-items-center">
                 <li class="nav-item"><a class="nav-link active" href="#">الصفحة الرئيسية</a></li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
+                    <a class="nav-link " href="services.html" id="navbarDropdown" >
                         الخدمات <i class="fas fa-chevron-down ms-1" style="font-size: 10px;"></i>
                     </a>
                     <ul class="dropdown-menu shadow">
-                        <li><a class="dropdown-item" href="#">إدارة منصات التواصل الاجتماعي</a></li>
-                        <li><a class="dropdown-item" href="#">الموشن جرافيك والمونتاج</a></li>
+                        <li><a class="dropdown-item" href="services-social.media.html">إدارة منصات التواصل الاجتماعي</a></li>
+                        <li><a class="dropdown-item" href="services-motion.html">الموشن جرافيك والمونتاج</a></li>
                         <li><a class="dropdown-item" href="#">كتابة المحتوى الإعلاني</a></li>
                         <li><a class="dropdown-item" href="#">تحسين محركات البحث (SEO)</a></li>
                         <li><a class="dropdown-item" href="#">إدارة الحملات الإعلانية</a></li>
@@ -56,6 +56,11 @@
     </div>
 </nav>
 <section class="hero-section text-center text-white d-flex align-items-center">
+         <div class="animated-bg-shapes">
+        <div class="shape shape-1"></div>
+        <div class="shape shape-2"></div>
+        <div class="shape shape-3"></div>
+    </div> 
     <div class="container">
         <div class="hero-logo mb-4" data-aos="zoom-in">
             <img src="images/logo.png" alt="Maksab Logo" style="width: 250px;">
@@ -330,11 +335,14 @@
         </div>
     </div>
 </section>
+<a href="#" class="scroll-top-btn">
+    <i class="fas fa-chevron-up"></i>
+</a>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/aos.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
-    <a href="https://wa.me/yournumber" class="whatsapp-float shadow" target="_blank">
+    <a href="https://wa.me/+966115004605" class="whatsapp-float shadow" target="_blank">
     <i class="fab fa-whatsapp"></i>
 </a>
 </body>
