--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav align-items-center">
-                <li class="nav-item"><a class="nav-link active" href="#">الصفحة الرئيسية</a></li>
+                <li class="nav-item"><a class="nav-link active" href="index.html">الصفحة الرئيسية</a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link " href="services.html" id="navbarDropdown" >
                         الخدمات <i class="fas fa-chevron-down ms-1" style="font-size: 10px;"></i>
@@ -36,16 +36,16 @@
                     <ul class="dropdown-menu shadow">
                         <li><a class="dropdown-item" href="services-social.media.html">إدارة منصات التواصل الاجتماعي</a></li>
                         <li><a class="dropdown-item" href="services-motion.html">الموشن جرافيك والمونتاج</a></li>
-                        <li><a class="dropdown-item" href="#">كتابة المحتوى الإعلاني</a></li>
-                        <li><a class="dropdown-item" href="#">تحسين محركات البحث (SEO)</a></li>
-                        <li><a class="dropdown-item" href="#">إدارة الحملات الإعلانية</a></li>
-                        <li><a class="dropdown-item" href="#">تصميم وتطوير المواقع الإلكترونية</a></li>
+                        <li><a class="dropdown-item" href="services-content.html">كتابة المحتوى الإعلاني</a></li>
+                        <li><a class="dropdown-item" href="services-SEO.html">تحسين محركات البحث (SEO)</a></li>
+                        <li><a class="dropdown-item" href="Advertising content management.html">إدارة الحملات الإعلانية</a></li>
+                        <li><a class="dropdown-item" href="services-wep.devolpment.html">تصميم وتطوير المواقع الإلكترونية</a></li>
                     </ul>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="#">الذكاء الاصطناعي مع مكسب</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">من نحن</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">المدونة</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">تواصل معنا</a></li>
+                <li class="nav-item"><a class="nav-link" href="maksap-ai.html">الذكاء الاصطناعي مع مكسب</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">من نحن</a></li>
+                <li class="nav-item"><a class="nav-link" href="blog.html">المدونة</a></li>
+                <li class="nav-item"><a class="nav-link" href="contact-us.html">تواصل معنا</a></li>
             </ul>
         </div>
 
