--- a/services-social.media.html
+++ b/services-social.media.html
@@ -34,14 +34,14 @@
                     <ul class="dropdown-menu shadow">
                         <li><a class="dropdown-item" href="services-social.media.html">إدارة منصات التواصل الاجتماعي</a></li>
                         <li><a class="dropdown-item" href="services-motion.html">الموشن جرافيك والمونتاج</a></li>
-                        <li><a class="dropdown-item" href="#">كتابة المحتوى الإعلاني</a></li>
-                        <li><a class="dropdown-item" href="#">تحسين محركات البحث (SEO)</a></li>
-                        <li><a class="dropdown-item" href="#">إدارة الحملات الإعلانية</a></li>
-                        <li><a class="dropdown-item" href="#">تصميم وتطوير المواقع الإلكترونية</a></li>
+                        <li><a class="dropdown-item" href="services-content.html">كتابة المحتوى الإعلاني</a></li>
+                        <li><a class="dropdown-item" href="services-SEO.html">تحسين محركات البحث (SEO)</a></li>
+                        <li><a class="dropdown-item" href="Advertising content management.html">إدارة الحملات الإعلانية</a></li>
+                        <li><a class="dropdown-item" href="services-wep.devolpment.html">تصميم وتطوير المواقع الإلكترونية</a></li>
                     </ul>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="#">الذكاء الاصطناعي مع مكسب</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">من نحن</a></li>
+                <li class="nav-item"><a class="nav-link" href="maksap-ai.html">الذكاء الاصطناعي مع مكسب</a></li>
+                <li class="nav-item"><a class="nav-link" href="blog.html">من نحن</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">المدونة</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">تواصل معنا</a></li>
             </ul>
