--- a/index.html
+++ b/index.html
@@ -32,12 +32,28 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+    <link rel="canonical" href="https://maksab-ksa.com/">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "مكسب - الحلول الذكية للتسويق الرقمي",
+      "url": "https://maksab-ksa.com/",
+      "logo": "https://maksab-ksa.com/images/logo.png",
+      "sameAs": [
+        "https://x.com/KsaMaksab",
+        "https://www.facebook.com/people/%D9%85%D9%83%D8%B3%D8%A8-Maksab/61564251375650/",
+        "https://www.instagram.com/maksabksa",
+        "https://www.linkedin.com/in/%D9%85%D9%83%D8%B3%D8%A8-maksab-5b2691324/"
+      ]
+    }
+    </script>
 </head>
 
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top" data-aos="fade-down">
-        <div class="container-fluid px-lg-5">
+        <div class="container-fluid ps-0 pe-lg-5">
 
             <a class="navbar-brand m-0" href="#" data-aos="fade-right" data-aos-delay="200">
                 <img src="images/logo.png" alt="Maksab Logo" class="main-logo">
@@ -78,6 +94,8 @@
             </div>
 
         </div>
+
+
     </nav>
     <section class="hero-section text-center text-white d-flex align-items-center">
 
@@ -101,6 +119,15 @@
                 <a href="contact-us.html" class="btn btn-pill-blue">تواصل معنا <i
                         class="fas fa-arrow-left ms-2"></i></a>
             </div>
+        </div>
+
+        <!-- Static Wave Divider -->
+        <div class="hero-wave-divider">
+            <svg viewBox="0 0 1440 120" preserveAspectRatio="none">
+                <path
+                    d="M0,20 C60,60 120,0 200,30 C280,60 320,10 400,40 C480,70 540,5 620,35 C700,65 760,15 840,45 C920,75 980,10 1060,40 C1140,70 1200,20 1280,50 C1360,80 1400,30 1440,50 L1440,120 L0,120 Z"
+                    fill="#1B4C74"></path>
+            </svg>
         </div>
     </section>
 
@@ -431,16 +458,32 @@
                         </ul>
 
                         <div class="social-links mt-4">
-                            <a href="https://x.com/KsaMaksab"><i class="fab fa-twitter"></i></a>
-                            <a
-                                href="https://www.facebook.com/people/%D9%85%D9%83%D8%B3%D8%A8-Maksab/61564251375650/?locale=ar_AR"><i
-                                    class="fab fa-facebook"></i></a>
-                            <a href="https://www.instagram.com/maksabksa"><i class="fab fa-instagram"></i></a>
-                            <a href="https://www.linkedin.com/in/%D9%85%D9%83%D8%B3%D8%A8-maksab-5b2691324/"><i
-                                    class="fab fa-linkedin-in"></i></a>
-                            <a href="https://www.snapchat.com/@maksabksa2022?share_id=L1dxz8UIV68&locale=ar-AE"><i
-                                    class="fab fa-snapchat-ghost"></i></a>
-                            <a href="https://share.google/hXcT8DepeAjPXpRzF"><i class="fas fa-map-marker-alt"></i></a>
+                            <a href="https://x.com/KsaMaksab" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+
+                            <a href="https://www.facebook.com/people/%D9%85%D9%83%D8%B3%D8%A8-Maksab/61564251375650/?locale=ar_AR"
+                                target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-facebook"></i>
+                            </a>
+
+                            <a href="https://www.instagram.com/maksabksa" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+
+                            <a href="https://www.linkedin.com/in/%D9%85%D9%83%D8%B3%D8%A8-maksab-5b2691324/"
+                                target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+
+                            <a href="https://www.snapchat.com/@maksabksa2022?share_id=L1dxz8UIV68&locale=ar-AE"
+                                target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-snapchat-ghost"></i>
+                            </a>
+
+                            <a href="https://share.google/hXcT8DepeAjPXpRzF" target="_blank" rel="noopener noreferrer">
+                                <i class="fas fa-map-marker-alt"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
