--- a/services-SEO.html
+++ b/services-SEO.html
@@ -31,11 +31,24 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+    <link rel="canonical" href="https://maksab-ksa.com/services-SEO.html">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Service",
+      "serviceType": "SEO Optimization",
+      "provider": {
+        "@type": "Organization",
+        "name": "مكسب"
+      },
+      "description": "خدمة SEO احترافية تضمن ظهور موقعك في النتائج الأولى لـ Google وزيادة عدد الزوار والعملاء الفعليين."
+    }
+    </script>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top" data-aos="fade-down">
-        <div class="container-fluid px-lg-5">
+        <div class="container-fluid ps-0 pe-lg-5">
 
             <a class="navbar-brand m-0" href="#" data-aos="fade-right" data-aos-delay="200">
                 <img src="images/logo.png" alt="Maksab Logo" class="main-logo">
@@ -390,15 +403,32 @@
                         </ul>
 
                         <div class="social-links mt-4">
-                            <a href="https://x.com/KsaMaksab"><i class="fab fa-twitter"></i></a>
-                            <a
-                                href="https://www.facebook.com/people/%D9%85%D9%83%D8%B3%D8%A8-Maksab/61564251375650/?locale=ar_AR"><i
-                                    class="fab fa-facebook"></i></a>
-                            <a href="https://www.instagram.com/maksabksa"><i class="fab fa-instagram"></i></a>
-                            <a href="https://www.linkedin.com/in/%D9%85%D9%83%D8%B3%D8%A8-maksab-5b2691324/"><i
-                                    class="fab fa-linkedin-in"></i></a>
-                            <a href="https://www.snapchat.com/@maksabksa2022?share_id=L1dxz8UIV68&locale=ar-AE"><i
-                                    class="fab fa-snapchat-ghost"></i></a>
+                            <a href="https://x.com/KsaMaksab" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+
+                            <a href="https://www.facebook.com/people/%D9%85%D9%83%D8%B3%D8%A8-Maksab/61564251375650/?locale=ar_AR"
+                                target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-facebook"></i>
+                            </a>
+
+                            <a href="https://www.instagram.com/maksabksa" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+
+                            <a href="https://www.linkedin.com/in/%D9%85%D9%83%D8%B3%D8%A8-maksab-5b2691324/"
+                                target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+
+                            <a href="https://www.snapchat.com/@maksabksa2022?share_id=L1dxz8UIV68&locale=ar-AE"
+                                target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-snapchat-ghost"></i>
+                            </a>
+
+                            <a href="https://share.google/hXcT8DepeAjPXpRzF" target="_blank" rel="noopener noreferrer">
+                                <i class="fas fa-map-marker-alt"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
