--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
                     </h1>
 
                     <h4 class="text-gold fw-bold mb-4 display-5" data-aos="zoom-in" data-aos-delay="300">
-                        في مكسب، نقدم حلولًا تسويقية متكاملة ترتقي بأعمالك إلى مستوى أعلى.
+                       نقدم حلولًا تسويقية متكاملة ترتقي بأعمالك إلى مستوى أعلى.
                     </h4>
 
                     <p class="unified-hero-desc text-white mb-5 fs-5" data-aos="fade-up" data-aos-delay="500"
@@ -355,5 +355,6 @@
         aria-label="تواصل معنا عبر واتساب">
         <i class="fab fa-whatsapp"></i>
 </body>
+
 
 </html>
